5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1577_1326.log
== TEST (2019-03-19 18:36:08) 
-- CODE:
area=40-35
print(area)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:36:12) 
-- CODE:
area=40-35
print(area)
-- EXECUTION TIME:
0.14235
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:36:15) 
-- CODE:
area=40-35
print(area)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:36:18) 
-- CODE:
area=40-35
print(area)
-- EXECUTION TIME:
0.194271
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:36:19) 
-- CODE:
area=40-35
print(area)
-- EXECUTION TIME:
0.14256
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:36:24) 
-- CODE:
area=40-35
print(area)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:36:26) 
-- CODE:
area=40-35
print(area)
-- EXECUTION TIME:
0.200468
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:36:27) 
-- CODE:
area=40-35
print(area)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:36:29) 
-- CODE:
area=40-35
print(area)
-- EXECUTION TIME:
0.194263
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:36:30) 
-- CODE:
area=40-35
print(area)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:37:48) 
-- CODE:
area=40-35
print(area)
-- EXECUTION TIME:
0.196993
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:38:05) 
-- CODE:
area=40-35
print(area)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:38:09) 
-- CODE:
area=40-35
print(area)
-- EXECUTION TIME:
0.224389
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:38:58) 
-- CODE:
area=40-35
area=40-35=5
-- ERROR:
File "XXXX", line 2
    area=40-35=5
        ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:39:16) 
-- CODE:
area=40-35
print(area)=40-35=5
-- ERROR:
File "XXXX", line 2
    print(area)=40-35=5
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:39:21) 
-- CODE:
area=40-35
print(area)=40-35=5
-- EXECUTION TIME:
0.193054
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 2
    print(area)=40-35=5
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:40:37) 
-- CODE:
a=40
a=35
print(a)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:40:51) 
-- CODE:
a = 40
a = 35
print(a)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:46:16) 
-- CODE:
a = 40
a = 35
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(resultado)
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:46:23) 
-- CODE:
a = 40
a = 35
print(r)
-- EXECUTION TIME:
0.222583
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1326/main.py", line 3, in <module>
    print(r)
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:49:51) 
-- CODE:
a=40
a=35
print(=)
-- ERROR:
File "XXXX", line 3
    print(=)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:49:56) 
-- CODE:
a=40
a=35
print(a)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:59:36) 
-- CODE:
print(40-35)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:59:39) 
-- CODE:
print(40-35)
-- EXECUTION TIME:
0.136798
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:59:43) 
-- CODE:
print(40-35)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:02:03) 
-- CODE:
print(40-35)
print()
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:02:08) 
-- CODE:
print(40-35)
print()
-- EXECUTION TIME:
0.166755
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:07:21) 
-- CODE:
print(40-35)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:07:36) 
-- CODE:
print(40-35)
print(5)
-- OUTPUT:
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:07:43) 
-- CODE:
print(40-35)
print(5)
-- EXECUTION TIME:
0.1948
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:07:49) 
-- CODE:
print(40-35)
print()
-- EXECUTION TIME:
0.122222
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:07:51) 
-- CODE:
print(40-35)
print()
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:08:06) 
-- CODE:
print(40+35)
print()
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:08:09) 
-- CODE:
print(40+35)
print()
-- EXECUTION TIME:
0.137345
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
